# pelita

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.md  COPYING  MANIFEST.in  Pelita.ipynb  README.md  README.tournament.md  TEACHING.md  _contributors.html  api.html  build-docs.sh  check_boilerplate.sh  check_layout_consistency.py  clienttest.py  commit-doc-tree.sh  commit-doc.sh  demo.py  demo_viewer.py  deploy-gh-pages.sh  development.html  genindex.html  getting_started.html  index.html  info.html  intro.html  make-doc-tree.sh  module_player.py  np-modindex.html  objects.inv  pelita-complete.sh  pelitagame  pelitagame.py  pelitaviewer  py-modindex.html  pyproject.toml  rules.html  running_player.html  search.html  (+10 more)
.github/workflows/: build_docs.yml  push_ci.yml  pypi_release.yml  test_pytest.yml
_modules/: collections.html  index.html
_modules/collections/: abc.html
_modules/pelita/: __version_from_git.html  containers.html  datamodel.html  game_master.html  graph.html  layout.html  player.html  simplesetup.html  utils.html  viewer.html
_sources/: _contributors.rst.txt  _contributors.txt  api.rst.txt  api.txt  development.rst.txt  development.txt  getting_started.rst.txt  index.rst.txt  index.txt  info.txt  intro.txt  rules.rst.txt  running_player.rst.txt  running_player.txt  user-api.txt  writing_player.rst.txt  writing_player.txt
_sources/pelita/: pelita.__layouts.rst.txt  pelita.__layouts.txt  (+912 more)
_static/: documentation_options.js  index.html  pelita.css  search.html  searchtools.js
contrib/: README.txt  ci.cfg  ci_engine.py  test_ci_engine.py
demo/: benchmark_game.py  demo.py  demo04_basic_attacker.py  demo_100_matches.py  demo_bfs.py  demo_client_game.py  demo_defensive.py  demo_game.py  demo_local_actor.py  demo_randombots.py  demo_run_game.py  demo_server_game.py  demo_simpleclient.py  demo_simplegame.py  demo_simplelocalgame.py  demo_simpleserver.py  demo_smarteatingbots.py  demo_smartrandombots.py  demo_stoppingbots.py  demo_team.py  demo_tk_game.py  demo_viewer.py
doc/: Makefile  sphinxext
layouts/: 01.with_dead_ends.layout  01_without_dead_ends.layout  02.demo.layout  02_with_dead_ends.layout  02_without_dead_ends.layout  03.with_dead_ends.layout  03.without_dead_ends.layout  03_demo.layout  04.demo.layout  04.with_dead_ends.layout  04.without_dead_ends.layout  05.with_dead_ends.layout  05.without_dead_ends.layout  06_with_dead_ends.layout  06_without_dead_ends.layout  07.without_dead_ends.layout  07_with_dead_ends.layout  08.with_dead_ends.layout  08_without_dead_ends.layout  09_with_dead_ends.layout  09_without_dead_ends.layout  10_with_dead_ends.layout  10_without_dead_ends.layout  11_with_dead_ends.layout  11_without_dead_ends.layout  12_with_dead_ends.layout  12_without_dead_ends.layout  13_with_dead_ends.layout  13_without_dead_ends.layout  14.without_dead_ends.layout  14_with_dead_ends.layout  15_with_dead_ends.layout  15_without_dead_ends.layout  16_with_dead_ends.layout  16_without_dead_ends.layout  17_with_dead_ends.layout  17_without_dead_ends.layout  18_with_dead_ends.layout  18_without_dead_ends.layout  19.without_dead_ends.layout  (+607 more)
pelita/: __init__.py  __layouts.py  __version_from_git.py  actors.py  base_utils.py  client.py  containers.py  create_db.py  datamodel.py  exceptions.py  game.py  game_master.py  gamestate_filters.py  graph.py  layout.py  layouts.py  libpelita.py  maze_generator.py  mesh.py  network.py  pelita.__layouts.html  pelita.__version_from_git.html  pelita.__version_from_git.version.html  pelita.actors.ClientActor.__init__.html  pelita.actors.ClientActor.connect.html  pelita.actors.ClientActor.connect_local.html  pelita.actors.ClientActor.html  pelita.actors.ClientActor.is_server_connected.html  pelita.actors.ClientActor.register_team.html  pelita.actors.RemoteTeamPlayer.__init__.html  pelita.actors.RemoteTeamPlayer.html  pelita.actors.RemoteViewer.__init__.html  pelita.actors.RemoteViewer.html  pelita.actors.RemoteViewer.observe.html  pelita.actors.RemoteViewer.set_initial.html  pelita.actors.ServerActor.__init__.html  pelita.actors.ServerActor.auto_shutdown.html  pelita.actors.ServerActor.check_for_start.html  pelita.actors.ServerActor.delayed_start_game.html  pelita.actors.ServerActor.handle_inbox.html  (+892 more)
players/: BFSPlayer.py  BasicDefensePlayer.py  FoodEatingPlayer.py  RandomExplorerPlayer.py  RandomPlayers.py  SmartEatingPlayer.py  SmartRandomPlayer.py  __init__.py
template/: .gitignore  README.md  README.txt  demo01_stopping.py  demo02_random.py  demo03_smartrandom.py  demo04_basic_attacker.py  demo05_basic_defender.py  demo06_one_and_one.py  demo07_detect_death.py  demo08_debugger.py  demo09_polite_random.py  demo10_background_games.py  demo11_plotting_and_matrices.ipynb  demo_basic_attacker.py  demo_basic_defender.py  demo_one_and_one.py  demo_randombots.py  demo_randomexplorerbots.py  demo_smarteatingbots.py  demo_smartrandombots.py  demo_stopping.py  talk_util.py  test_demo01_stopping.py  test_demo02_random.py  test_demo03_smartrandom.py  test_demo04_basic_attacker.py  test_demo05_basic_defender.py  test_demo09_polite_random.py  test_demo_basic_attacker.py  test_demo_basic_defender.py  test_demo_random.py  test_demo_smartrandom.py  test_demo_stopping.py  test_smartrandombots.py  test_utils.py  utils.py
test/: _test_factory.py  bugs_basicdefenseplayer.py  demo01_stopping.py  demo02_random.py  module_player.py  pelitagame.py  test_actor.py  test_connection.py  test_containers.py  test_datamodel.py  test_datmodel.py  test_filter_gamestates.py  test_game.py  test_game_master.py  test_graph.py  test_json.py  test_layout.layout  test_layout.py  test_libpelita.py  test_maze_generation.py  test_mesh.py  test_network.py  test_pelita_player.py  test_pelitagame.py  test_player.py  test_player_base.py  test_players.py  test_remote_game.py  test_rules.py  test_simplesetup.py  test_team.py  test_threading.py  test_tournament.py  test_universe.py  test_utils.py
tournament/: README  README.md  komode.py  participants.txt  roundrobin.py  teams-2015.yaml  test.yaml  test_tournament.py  tournament.py  tutors.yaml
(+2768 files in other folders)
