[build-system]
requires = [
    "flit_core >=3.2,<4",
    "pytest-runner",
]
build-backend = "flit_core.buildapi"

[project]
name = "pelita"
description = "Pelita"
keywords = ["education"]
license = {text = "BSD-2"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls = {Homepage = "https://github.com/ASPP/pelita"}
requires-python = ">= 3.10"
dependencies = [
    "pyzmq",
    "PyYAML",
    "numpy",
    "networkx",
    "pytest>=4",
    "zeroconf",
    "rich",
    "click",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
pelita = "pelita.scripts.pelita_main:main"
pelita-tournament = "pelita.scripts.pelita_tournament:main"
pelita-tkviewer = "pelita.scripts.pelita_tkviewer:main"
pelita-player = "pelita.scripts.pelita_player:main"
pelita-server = "pelita.scripts.pelita_server:main"

[project.optional-dependencies]
test = [
    "pytest>=4",
    "pytest-cov",
]
doc = ["sphinx"]

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
# addopts = --verbose
python_files = ["test/test_*.py", "contrib/test_*.py"]

[tool.coverage.run]
relative_files = true
omit = [
    "pelita/scripts/*",
    "pelita/ui/*",
    "test/testplayers/*",
]

[tool.ruff]
extend-exclude = ["test/fixtures"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501", # ignore long lines
    # "F841", # ignore unused variables
    "E741", # ignore ambiguous variable name
]
