[metadata]
name = pelita
version = attr: pelita.__version__
description = Pelita
long-description= file: README.md
home-page = https://github.com/ASPP/pelita
keywords = education
license = BSD-2
license-file = COPYING
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = true
python_requires = >= 3.6
packages = find:
install_requires =
    pyzmq
    PyYAML
    numpy
include_package_data = True
setup_requires =
    pytest-runner
tests_require = 
    pytest>=4

[options.entry_points]
console_scripts =
    pelita = pelita.scripts.pelita_main:main
    pelita-tournament = pelita.scripts.pelita_tournament:main
    pelita-tkviewer = pelita.scripts.pelita_tkviewer:main
    pelita-player = pelita.scripts.pelita_player:main

[options.packages.find]
exclude =
    test

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = test/*.py
